Fix embedded player hiding bottom of the file list on NC 31+
On Nextcloud 31 and later, the file list of the Files app has no bottom
margin of any kind by default. Hence, showing the embedded Music player hid
the bottom-most files of the list and they couldn't be scrolled to be
visible. We now add some margin on our own while the embedded player is
visible. On older Nextcloud versions, this adds unnecessary extra margin but
the effect isn't very visible and those NC versions are already officially
out of support by Nextcloud Gmbh anyway.

--- a/css/embedded/files-music-player.css
+++ b/css/embedded/files-music-player.css
@@ -193,3 +193,8 @@
 	position: absolute;
 	inset-inline-end: 54px;
 }
+
+/* Ensure the music controls don't cover the bottom of the file list when visible */
+.files-list:has(+ #music-controls:not([style*="display: none"])) .files-list__table {
+	margin-bottom: 114px;
+}
